# bazel_demo

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  hello_world.cc
cc/: .bazelrc  BUILD.bazel  MODULE.bazel  demo_absl.cc  demo_absl.h  demo_absl_test.cc  hello_world.cc
go/: BUILD.bazel  MODULE.bazel  demo_gjson.go  demo_gjson_test.go  go.mod  hello_world.go
java/: .bazelrc  BUILD.bazel  MODULE.bazel  maven_install.json
java/src/main/java/com/example/: BUILD.bazel  DemoGuava.java  HelloWorld.java
java/src/test/java/com/example/: BUILD.bazel  DemoGuavaTest.java
python/: .bazelrc  BUILD.bazel  MODULE.bazel  demo_cowsay.py  demo_cowsay_test.py  hello_world.py  requirements_lock.txt
rust/: .bazelrc  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  demo_serde.rs  hello_world.rs
src/main/java/com/example/: BUILD.bazel  HelloWorld.java
