# Load the Java rules that we will use from the ruleset that we specified in
# `MODULE.bazel`.
load("@rules_java//java:defs.bzl", "java_binary", "java_library")

# By default, all targets in a package (i.e. BUILD file) are private to that
# package. As it is conventional for Java tests to be in a different part of the
# source tree (thus different Bazel package), it is necessary to make targets
# visible to those test packages.  This can be done on a target-by-target basis,
# but in this case, it is more useful to override the default visibility for the
# entire package.
package(default_visibility = ["//src/test/java/com/example:__pkg__"])

# Run this:
#   bazel run //src/main/java/com/example:HelloWorld
# ...or, if you're in the directory with this BUILD file, use the short form:
#   bazel run :HelloWorld
java_binary(
    name = "HelloWorld",
    srcs = ["HelloWorld.java"],
    # Depend on the small library, defined below.
    deps = [":DemoGuava"],
)

# Small library to demonstrate external dependencies and unit testing.
java_library(
    name = "DemoGuava",
    srcs = ["DemoGuava.java"],
    deps = [
        # The target name of the Maven package is the same as the group ID and
        # artifact ID, with separators replaced with underscores.
        "@maven//:com_google_guava_guava",
    ],
)

